--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,41 +18,82 @@
     <!-- ===========Header======== -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav--logo">
+        <a href="#" class="nav__logo">
           <span>Merry</span>
           <span>Christmas</span>
         </a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link"> <span>01</span>Home
-             </a>
+              <a href="#" class="nav__link active__link">
+                <span>01</span>Home
+              </a>
             </li>
 
             <li class="nav__item">
-                <a href="#" class="nav__link"> <span>02</span>Card
-               </a>
-              </li>
+              <a href="#" class="nav__link"> <span>02</span>Card </a>
+            </li>
 
-              <li class="nav__item">
-                <a href="#" class="nav__link"> <span>01</span> Contact Us
-               </a>
-              </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link"> <span>03</span> Contact Us </a>
+            </li>
           </ul>
-sdjfbsdjkfskjdfnskjdfnkjsnfskjdnfskjnfskjf
-          sdklfjsklfndsl
-          sdjfnsdkjfnsdkf
-          werioefnakjdfk;dnf
-          
+          <div class="nav__buttons">
+            <div class="nav__notification">
+              <img src="Images/bell.png" alt="image" class="nav__bell" />
+              <div class="nav__circle">2</div>
+            </div>
+            <a href="#" class="button button__dark"> Send a card</a>
+          </div>
+
+          <!-- Close button -->
+          <div class="nav__close" id="nav__close">
+            <i class="ri-close-line"></i>
+          </div>
+        </div>
+
+        <!-- Toggle Button -->
+        <div class="nav__toggle" id="nav__toggle">
+          <i class="ri-apps-2-line"></i>
         </div>
       </nav>
     </header>
     <!-- ===========MAIN========= -->
     <main class="main">
       <!-- =========HOME======= -->
-      <section class="" home></section>
+      <section class="home">
+        <div class="home container container">
+          <img src="Images/santa.png" alt="image" class="home__img" />
+          <div class="home__data">
+            <div>
+              <h1 class="home__title" id="title__data">
+                Last
+                <div class="home__number" id="number--data">03</div>
+                <div class="home__text" id="text--data">Days</div>
+                To
+                <br>
+                 Receive Christmas
+              </h1>
+               <h1 class="home__title" id="msg--christmas"></h1>
+            </div>
+            <p class="home__description">
+              Share some Christmas spirit and happiness
+              <br>
+              with these festive cards. 
+            </p>
+            <a href="" class="button" id="button1">Send a Christmas Card</a>
+          </div>
+          <img src="Images/bell.png" alt="image" class="home__bell">
+          <img src="Images/star.png" alt="" class="home__star">
+
+          <div class="home__blob"></div>
+        </div>
+      </section>
     </main>
     <!-- ==============show js==========-->
+    <!-- <script src="https://app.embed.im/snow.js" defer></script> -->
+
+
 
     <!-- ===============Main JS============= -->
     <script src="script.js"></script>
